--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ img {
 }
 
 .intro {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 400;
   margin-top: 25px;
   margin-bottom: 20px;
@@ -71,4 +71,10 @@ img {
   border-radius: 5px;
   margin-bottom: 15px;
   background-color: hsl(0, 0%, 20%);
+  cursor: pointer;
+}
+
+.hover:hover {
+  background-color: hsl(75, 94%, 57%);
+  color: black;
 }
